# lidar_spinning_mirror

./: .gitignore  .gitmodules  CMakeLists.txt  readme.md
data/: download.sh
include/: cost_fun.h  point_to_point_source_to_target_rotated_mirror_tait_bryan_wc.py  point_to_point_source_to_target_rotated_mirror_tait_bryan_wc_jacobian.h  utils.h
src/: calibration.cpp  utils.cpp  validation.cpp
